--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -138,8 +138,8 @@
     <string name="remains">Remains:</string>
     <string name="try_to_buy">Buying&#8230;</string>
     <string name="try_to_sell">Selling&#8230;</string>
-    <string name="alarm_notify_for">Notify for: %s</string>
-    <string name="alarm_notify_text">%1$s price is: %2$s</string>
+    <string name="simple_alarm_notify_title">Notify for: %s</string>
+    <string name="simple_alarm_notify_content">%1$s price is: %2$s</string>
     <string name="foreground_content">Assist is watching tasks.</string>
     <string name="settings_dtitle_trades">Trades and Trans. count</string>
     <string name="settings_dtitle_depth">Depth count</string>
@@ -162,5 +162,7 @@
     <string name="no_keys">API-key and API-secret is not installed</string>
     <string name="next_news_button">Next news</string>
     <string name="prev_news_button">Prev news</string>
+    <string name="order_alarm_notify_title">Order filled: %s</string>
+    <string name="order_alarm_notify_content">Balance: + %s</string>
 
 </resources>
